fixed z-index issue

--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
     --purple: #7b2c6a;
     --darkpurple: #622755;
   }
+  body {
+    position: relative;
+    z-index: -3;
+  }
 @font-face {
     font-family: montserrat;
     src: url(/fonts/Montserrat-SemiBold.ttf);
